--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,10 @@
     <string name="btn_watch_later">Смотреть позже</string>
     <string name="btn_selections">Подборки</string>
     <string name="btn_settings">Настройки</string>
+    <string name="menu_settings_title">Настройки</string>
+    <string name="menu_favorites_title">Избранное</string>
+    <string name="menu_watch_later_title">Смотреть позже</string>
+    <string name="menu_selections_title">Подборки</string>
+    <string name="page_title">Search it!</string>
 
 </resources>
