--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,11 @@
     <string name="activity_favorites">Добавлено в избранное</string>
     <string name="activity_watch_later">Добавлено в список "Смотреть позже"</string>
     <string name="activity_share">Share!</string>
+    <string name="double_back_toast">Нажмите еще раз для выхода</string>
+
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 </resources>
